--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,30 @@
     width: 100%;
     height: 100vh;
 }
+:root {
+	--color-dark-color: #141922;
+	--color-dark-grey: #282828;
+	--color-black: #000000;
+	--color-white: #ffffff;
+	--color-grey: #717171;
+	--color-light-grey: #c1c1c1;
+	--color-highlight: #adff2f;
+}
 .d-flex{
     display: flex;
+}
+/* general */
+a, ul{
+    text-decoration: none;
+    list-style: none;
+    color: var(--color-white);
+}
+.padding-x{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.line-height{
+    line-height: 30px;
 }
 main{
     width: 100%;
@@ -23,19 +45,32 @@ main{
     bottom: 0;
     background-color: green;
 }
+/* side bar */
 #side-bar{
-    width:150px;
-    background-color: red;
+    width: 200px;
+    background-color: var(--color-black);
+    color: var(--color-white);
 }
+.side-bar-container{
+    width: 80%;
+    padding: 15px;
+}
+.list i{
+    font-size: 1.5rem;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
 #main-content{
-    width: calc(100% - 150px);
+    width: calc(100% - 200px);
     overflow-y: auto;
     padding-top: 100px;
     background-color: blue;
     padding: 90px 10px 0px 10px;
 }
 .call-to-action{
-    width: calc(100% - 150px);
+    width: calc(100% - 200px);
     height: 70px;
     position: fixed;
     top: 0;
