--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,13 @@
 .d-flex{
     display: flex;
 }
+.align-center{
+    align-items: center;
+    align-content: center;
+}
+.space-between{
+    justify-content: space-between;
+}
 /* general */
 a, ul{
     text-decoration: none;
@@ -26,11 +33,20 @@ a, ul{
     color: var(--color-white);
 }
 .padding-x{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .line-height{
     line-height: 30px;
+}
+.small-font{
+    font-size: 0.8rem;
+}
+.opacity{
+    opacity: 60%;
+}
+.small-padding-bottom{
+    padding-bottom: 10px;
 }
 main{
     width: 100%;
@@ -60,6 +76,12 @@ main{
     padding-right: 5px;
     padding-bottom: 10px;
     text-align: center;
+}
+.plus-bt{
+    background-color: var(--color-light-grey);
+    color: var(--color-black);
+    font-size: 1.8rem;
+    padding: 0 10px;
 }
 
 #main-content{
