--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ a, ul{
 .small-font{
     font-size: 0.8rem;
 }
+.medium-font{
+    font-size: 0.8rem;
+}
 .opacity{
     opacity: 60%;
 }
@@ -77,11 +80,9 @@ main{
     padding-bottom: 10px;
     text-align: center;
 }
-.plus-bt{
-    background-color: var(--color-light-grey);
-    color: var(--color-black);
-    font-size: 1.8rem;
-    padding: 0 10px;
+.fa-square-plus{
+    font-size: 2.5rem;
+    color: var(--color-light-grey);
 }
 
 #main-content{
@@ -91,11 +92,23 @@ main{
     background-color: blue;
     padding: 90px 10px 0px 10px;
 }
+
+/* call to action */
 .call-to-action{
     width: calc(100% - 200px);
     height: 70px;
     position: fixed;
     top: 0;
     right: 0;
-    background-color: yellow;
+    background-color: var(--color-dark-color);
+}
+.bt-upgrade{
+    border: 1px solid var(--color-white);
+    padding: 10px 30px;
+    border-radius: 20px;
+}
+.button{
+    text-align: right;
+    margin: 0 auto;
+    padding: 25px 10px;
 }
