--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     width: 100%;
     height: 100vh;
 }
+img{
+    width: 100%;
+    display: block;
+}
 :root {
 	--color-dark-color: #141922;
 	--color-dark-grey: #282828;
@@ -32,9 +36,18 @@ a, ul{
     list-style: none;
     color: var(--color-white);
 }
+.c-flex{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
 .padding-x{
     padding-top: 10px;
     padding-bottom: 10px;
+}
+.padding-y{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .line-height{
     line-height: 30px;
@@ -50,6 +63,10 @@ a, ul{
 }
 .small-padding-bottom{
     padding-bottom: 10px;
+}
+
+hr{
+    width: 98%;
 }
 main{
     width: 100%;
@@ -69,6 +86,7 @@ main{
     width: 200px;
     background-color: var(--color-black);
     color: var(--color-white);
+    position: relative;
 }
 .side-bar-container{
     width: 80%;
@@ -91,6 +109,12 @@ main{
     padding-top: 100px;
     background-color: blue;
     padding: 90px 10px 0px 10px;
+}
+.profile img{
+    width: 30px;
+    height: 30px;
+    background-color: var(--color-grey);
+    border-radius: 50%;
 }
 
 /* call to action */
