--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@ a, ul{
     list-style: none;
     color: var(--color-white);
 }
+.text-white{
+    color: var(--color-white);
+}
 .c-flex{
     display: flex;
     flex-flow: column nowrap;
@@ -73,13 +76,22 @@ main{
     height: calc(100% - 80px);
     background-color: violet;
 }
+
+/* play-bar */
 #play-bar{
     width: 100%;
     height: 80px;
     position: fixed;
     z-index: 1000;
     bottom: 0;
-    background-color: green;
+    background-color: var(--color-dark-grey);
+}
+#play-bar img{
+    width: 50px;
+    height: 50px;
+}
+.song{
+    width: calc(100%/3);
 }
 /* side bar */
 #side-bar{
