--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ img{
 .space-between{
     justify-content: space-between;
 }
+.justify-end{
+    justify-content: end;
+}
 /* general */
 a, ul{
     text-decoration: none;
@@ -87,11 +90,25 @@ main{
     background-color: var(--color-dark-grey);
 }
 #play-bar img{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 .song{
     width: calc(100%/3);
+}
+.play{
+    padding: 15px;
+    text-align: center;
+}
+.play-bar{
+    height: 4px;
+    width: 100%;
+    background-color: var(--color-grey);
+}
+.volume-bar{
+    width: 20%;
+    height: 4px;
+    background-color: var(--color-light-grey);
 }
 /* side bar */
 #side-bar{
