--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ img{
 .justify-end{
     justify-content: end;
 }
+.justify-center{
+    justify-content: center;
+}
 /* general */
 a, ul{
     text-decoration: none;
@@ -136,7 +139,7 @@ main{
     width: calc(100% - 200px);
     overflow-y: auto;
     padding-top: 100px;
-    background-color: blue;
+    background-color: var(--color-dark-color);
     padding: 90px 10px 0px 10px;
 }
 .profile img{
@@ -153,7 +156,7 @@ main{
     position: fixed;
     top: 0;
     right: 0;
-    background-color: var(--color-dark-color);
+    background-color: var(--color-black);
 }
 .bt-upgrade{
     border: 1px solid var(--color-white);
