--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,9 @@ img{
 .justify-center{
     justify-content: center;
 }
+.justify-start{
+    justify-content: start;
+}
 .text-center{
     text-align: center;
 }
@@ -154,6 +157,10 @@ main{
 }
 .cover{
     width: calc((100%/6)-36px);
+    margin: 6px;
+}
+.cover-mix{
+    width: calc((100%/2)/3 - 6px);
     margin: 6px;
 }
 /* call to action */
