--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,6 @@ a, ul{
 .text-white{
     color: var(--color-white);
 }
-.c-flex{
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-}
 .padding-x{
     padding-top: 10px;
     padding-bottom: 10px;
@@ -90,6 +85,7 @@ a, ul{
 
 hr{
     width: 95%;
+    background-color: var(--color-light-grey);
 }
 .bold{
     font-weight: 600;
@@ -149,12 +145,29 @@ main{
     width: 200px;
     background-color: var(--color-black);
     position: relative;
+    color: var(--color-white);
+}
+.top-bar{
+    height: calc(100% - 90px);
+    padding: 10px;
 }
 .list i{
+    padding-left: 5px;
     font-size: 1.5rem;
-    padding-right: 5px;
-    padding-bottom: 10px;
-    text-align: center;
+    line-height: 40px;
+}
+.playlist{
+    height: 150px;
+    overflow-y: scroll;
+    color: var(--color-white);
+}
+.bottom-bar{
+    height: 90px;
+    padding: 10px;
+}
+.border-bottom{
+    border-bottom: 1px solid white;
+    width: 98%;
 }
 .fa-square-plus{
     font-size: 2.5rem;
@@ -166,7 +179,10 @@ main{
     background-color: var(--color-grey);
     border-radius: 50%;
 }
-
+.logo{
+    width: 70%;
+    padding-bottom: 10px;
+}
 /* main content */
 #main-content{
     width: calc(100% - 200px);
@@ -178,6 +194,9 @@ main{
 .cover{
     width: calc((100%/6)-36px);
     margin: 6px;
+}
+.cover-img{
+    position: relative;
 }
 .cover-mix{
     width: calc((100%/2)/3 - 6px);
@@ -194,7 +213,7 @@ main{
     z-index: 100;
     top: 0;
     right: 0;
-    background-color: var(--color-black);
+    background-color: rgba(0, 0, 0, 0.209);
 }
 .bt-upgrade{
     border: 1px solid var(--color-white);
@@ -290,5 +309,13 @@ main{
 }
 .grey-text:hover{
     color: var(--color-white);
-    border-bottom: 1px solid var(--color-highlight);
+}
+.hover-play{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.292);
+    font-size: 2rem;
 }
