--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ input[type="range"] {
     overflow-y: auto;
     padding-top: 100px;
     background-color: var(--color-dark-color);
-    padding: 90px 10px 0px 10px;
+    padding: 90px 10px 10px 10px;
 }
 .cover{
     width: calc((100%/6)-36px);
@@ -229,6 +229,9 @@ input[type="range"] {
     .cover-mix{
         width: calc((100%/2)/2 - 12px);
         margin: 6px;
+    }
+    #main-content{
+        padding: 90px 0px 0px 10px;
     }
 }
 @media screen and (max-width:768px) {
@@ -298,7 +301,7 @@ input[type="range"] {
     transition: display 4s;
 }
 .cover-img:hover .hover-play{
-    display: block;
+    display: flex;
     background-color: rgba(0, 0, 0, 0.292);
     position: absolute;
     top: 0;
