--- a/css/style.css
+++ b/css/style.css
@@ -376,3 +376,7 @@ input[type="range"]:hover{
 .dropdown:hover .dropdown-content{
     display: inline-block;
 }
+.album-img{
+    width: 60px;
+    height: 60px;
+}
