--- a/css/style.css
+++ b/css/style.css
@@ -134,12 +134,19 @@ input[type="range"] {
 /* side bar */
 #side-bar{
     width: 200px;
-    background-color: var(--color-black);
     position: relative;
     color: var(--color-white);
+    overflow: hidden;
 }
 .top-bar{
     height: calc(100% - 90px);
+    padding: 10px;
+    background-color: var(--color-black);
+    overflow: hidden;
+}
+.bottom-bar{
+    background-color: var(--color-black);
+    height: 90px;
     padding: 10px;
 }
 .list i{
@@ -151,10 +158,6 @@ input[type="range"] {
     height: 150px;
     overflow-y: scroll;
     color: var(--color-white);
-}
-.bottom-bar{
-    height: 90px;
-    padding: 10px;
 }
 .border-top{
     border-top: 1px solid white;
@@ -376,11 +379,25 @@ input[type="range"]:hover{
 .dropdown:hover .dropdown-content{
     display: inline-block;
 }
-.album-img{
-    width: 60px;
-    height: 60px;
+.divTable{
+    display: table;
+    width:100%;
+    color: var(--color-white);
+    border:1px solid #666666;
+    border-spacing:5px;
 }
-.number-container{
-    width: 120px;
-    height: 120px;
+.divRow
+{
+    width:auto;
+    display:table-row;
+}
+.divCell
+{
+    width:calc(100%/5);
+    float:left;
+    display:table-column;
+}
+.img-playlist img{
+    width: 50px;
+    height: 50px;
 }
