--- a/css/style.css
+++ b/css/style.css
@@ -381,23 +381,30 @@ input[type="range"]:hover{
 }
 .divTable{
     display: table;
-    width:100%;
+    width: 100%;
     color: var(--color-white);
-    border:1px solid #666666;
-    border-spacing:5px;
+    border-top:1px solid #666666;
+    border-spacing:20px;
 }
-.divRow
-{
-    width:auto;
+.divRow{
+    width: 100%;
     display:table-row;
+}
+.divCell-plus{
+    width: 40%;
+    float: left;
+    display:table-column;
 }
 .divCell
 {
-    width:calc(100%/5);
-    float:left;
+    width:20%;
+    float: left;
     display:table-column;
 }
 .img-playlist img{
     width: 50px;
     height: 50px;
+}
+.divCell .fa-heart{
+    color: var(--color-highlight);
 }
