--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,11 @@ main{
 .grey-text{
     color: var(--color-light-grey);
 }
-.medium-font{
+.med-font{
     font-size: 2rem;
+}
+.padding-right{
+    padding-right: 1px;
 }
 /* play-bar */
 #play-bar{
@@ -415,5 +418,9 @@ input[type="range"]:hover{
     font-size: 3.5rem;
     color: var(--color-highlight);
     padding-right: 20px;
+}
+.border-bottom{
+    padding-bottom: 35px;
+    border-bottom: 1px solid var(--color-dark-grey);
 }
 
