--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,10 @@ main{
     font-size: 2rem;
 }
 .padding-right{
-    padding-right: 1px;
+    padding-right: 31px;
+}
+.padding-bottom{
+    padding-bottom: 10px;
 }
 /* play-bar */
 #play-bar{
@@ -135,6 +138,113 @@ input[type="range"] {
     width: 30%;
     height: 4px;
 }
+.soundwave-container{
+    height: 40px;
+    width: auto;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 10px;
+  }
+  .bar{
+    width: 4px;
+    height: 100%;
+    background: #1dd05d;
+    border-radius: 2px;
+    margin: 0 2px;
+    animation: equalizer 1.9s steps(20, end) infinite;
+  }
+  .bar:nth-child(1) { 
+    animation-duration: 1.9s;
+  }
+  .bar:nth-child(2) { 
+    animation-duration: 2.0s;
+  }
+  .bar:nth-child(3) { 
+    animation-duration: 1.7s;
+  }
+  .bar:nth-child(4) { 
+    animation-duration: 2.1s;
+  }
+  @keyframes equalizer {
+    0% {
+      height: 60%;
+    }
+    4% {
+      height: 50%;
+    }
+    8% {
+      height: 40%;
+    }
+    12% {
+      height: 30%;
+    }
+    16% {
+      height: 20%;
+    }
+    20% {
+      height: 30%;
+    }
+    24% {
+      height: 40%;
+    }
+    28% {
+      height: 10%;
+    }
+    32% {
+      height: 40%;
+    }
+    36% {
+      height: 60%;
+    }
+    40% {
+      height: 20%;
+    }
+    44% {
+      height: 40%;
+    }
+    48% {
+      height: 70%;
+    }
+    52% {
+      height: 30%;
+    }
+    56% {
+      height: 10%;
+    }
+    60% {
+      height: 30%;
+    }
+    64% {
+      height: 50%;
+    }
+    68% {
+      height: 60%;
+    }
+    72% {
+      height: 70%;
+    }
+    76% {
+      height: 80%;
+    }
+    80% {
+      height: 70%;
+    }
+    84% {
+      height: 60%;
+    }
+    88% {
+      height: 50%;
+    }
+    92% {
+      height: 60%;
+    }
+    96% {
+      height: 70%;
+    }
+    100% {
+      height: 80%;
+    }
+  }
 
 /* side bar */
 #side-bar{
@@ -393,7 +503,8 @@ input[type="range"]:hover{
     border-spacing:20px;
 }
 .divRow{
-    width: 100%;
+    vertical-align: middle;
+    width: auto;
     display:table-row;
 }
 .divCell-plus{
@@ -401,8 +512,7 @@ input[type="range"]:hover{
     float: left;
     display:table-column;
 }
-.divCell
-{
+.divCell{   
     width:20%;
     float: left;
     display:table-column;
@@ -422,5 +532,9 @@ input[type="range"]:hover{
 .border-bottom{
     padding-bottom: 35px;
     border-bottom: 1px solid var(--color-dark-grey);
+}
+.divRow:hover{
+    background-color: rgba(0, 0, 0, 0.358);
+    border-radius: 10px;
 }
 
