--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ input[type="range"] {
 }
 
 /* media query */
-@media screen and (max-width:1200px) {
+@media all and (max-width:1200px) {
     .wrap{
         flex-flow: row wrap;
      }
@@ -355,7 +355,7 @@ input[type="range"] {
         padding: 90px 0px 0px 10px;
     }
 }
-@media screen and (max-width:768px) {
+@media all and (max-width:768px) {
      .cover{
          width: calc((100%/2) - 12px);
          margin: 6px;
@@ -370,8 +370,9 @@ input[type="range"] {
      #main-content li{
         padding-bottom: 40px;
      }
+
 }
-@media screen and (max-width:576px) {
+@media all and (max-width:576px) {
     #side-bar{
         width: 60px;
     }
@@ -458,7 +459,7 @@ input[type="range"]:hover{
 /*  */
 
 #library{
-    background-color: var(--color-dark-color);
+    background: linear-gradient(to bottom, rgba(137,52,247,1) 0%, rgba(137,52,247,1) 32%, rgba(36,35,36,1) 51%, rgba(0,0,0,1) 71%, rgba(28,28,28,1) 100%);
 }
 .title{
     font-size: 4rem;
@@ -467,6 +468,7 @@ input[type="range"]:hover{
     background-color: rgb(172, 105, 235);
     width: 300px;
     height: 300px;
+    min-width: 300px;
     position: relative;
     margin: 10px;
     border-radius: 10px;
